// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`cond > optimize #1 1`] = `
"import { match } from "@monstermann/match";
transform(value) ? true : false;"
`;

exports[`cond > optimize #2 1`] = `
"import { match } from "@monstermann/match";
value ? true : false;"
`;

exports[`cond > optimize #3 1`] = `
"import { match } from "@monstermann/match";
v ? true : false;"
`;

exports[`cond > optimize #4 1`] = `
"import { match } from "@monstermann/match";
(value ? 1 : 2) ? true : false;"
`;

exports[`cond > optimize #5 1`] = `
"import { match } from "@monstermann/match";
value.foo ? true : false;"
`;

exports[`cond > optimize #6 1`] = `
"import { match } from "@monstermann/match";
transform(value) ? true : false;"
`;

exports[`cond > optimize #7 1`] = `
"import { match } from "@monstermann/match";
transform(value.foo) ? true : false;"
`;

exports[`cond > optimize #8 1`] = `
"import { match } from "@monstermann/match";
value ? true : false;"
`;

exports[`cond > optimize #9 1`] = `
"import { match } from "@monstermann/match";
value ? true : false;"
`;

exports[`cond > optimize #10 1`] = `
"import { match } from "@monstermann/match";
v ? true : false;"
`;

exports[`cond > optimize #11 1`] = `
"import { match } from "@monstermann/match";
v ? true : false;"
`;

exports[`cond > optimize #12 1`] = `
"import { match } from "@monstermann/match";
(value ? 1 : 2) ? true : false;"
`;

exports[`cond > optimize #13 1`] = `
"import { match } from "@monstermann/match";
(value ? 1 : 2) ? true : false;"
`;

exports[`cond > optimize #14 1`] = `
"import { match } from "@monstermann/match";
value.foo ? true : false;"
`;

exports[`cond > optimize #15 1`] = `
"import { match } from "@monstermann/match";
value.foo ? true : false;"
`;

exports[`cond > optimize #16 1`] = `
"import { match } from "@monstermann/match";
transform(value) ? true : false;"
`;

exports[`cond > optimize #17 1`] = `
"import { match } from "@monstermann/match";
transform(value) ? true : false;"
`;

exports[`cond > optimize #18 1`] = `
"import { match } from "@monstermann/match";
transform(value.foo) ? true : false;"
`;

exports[`cond > optimize #19 1`] = `
"import { match } from "@monstermann/match";
transform(value.foo) ? true : false;"
`;

exports[`cond > optimize #20 1`] = `
"import { match } from "@monstermann/match";
(_value => transform(_value) ? true : false)({
  foo: a,
  bar: b
});"
`;

exports[`cond > optimize #21 1`] = `
"import { match } from "@monstermann/match";
value ? true : false;"
`;

exports[`cond > optimize #22 1`] = `
"import { match } from "@monstermann/match";
v ? true : false;"
`;

exports[`cond > optimize #23 1`] = `
"import { match } from "@monstermann/match";
(_value => (_value ? 1 : 2) ? true : false)({
  foo: a,
  bar: b
});"
`;

exports[`cond > optimize #24 1`] = `
"import { match } from "@monstermann/match";
a ? true : false;"
`;

exports[`cond > optimize #25 1`] = `
"import { match } from "@monstermann/match";
(_value => transform(_value) ? true : false)({
  foo: a,
  bar: b
});"
`;

exports[`cond > optimize #26 1`] = `
"import { match } from "@monstermann/match";
transform(a) ? true : false;"
`;

exports[`cond > optimize #27 1`] = `
"import { match } from "@monstermann/match";
value ? true : false;"
`;

exports[`cond > optimize #28 1`] = `
"import { match } from "@monstermann/match";
value ? true : false;"
`;

exports[`cond > optimize #29 1`] = `
"import { match } from "@monstermann/match";
v ? true : false;"
`;

exports[`cond > optimize #30 1`] = `
"import { match } from "@monstermann/match";
v ? true : false;"
`;

exports[`cond > optimize #31 1`] = `
"import { match } from "@monstermann/match";
(_value => (_value ? 1 : 2) ? true : false)({
  foo: a,
  bar: b
});"
`;

exports[`cond > optimize #32 1`] = `
"import { match } from "@monstermann/match";
(_value => (_value ? 1 : 2) ? true : false)({
  foo: a,
  bar: b
});"
`;

exports[`cond > optimize #33 1`] = `
"import { match } from "@monstermann/match";
a ? true : false;"
`;

exports[`cond > optimize #34 1`] = `
"import { match } from "@monstermann/match";
a ? true : false;"
`;

exports[`cond > optimize #35 1`] = `
"import { match } from "@monstermann/match";
(_value => transform(_value) ? true : false)({
  foo: a,
  bar: b
});"
`;

exports[`cond > optimize #36 1`] = `
"import { match } from "@monstermann/match";
(_value => transform(_value) ? true : false)({
  foo: a,
  bar: b
});"
`;

exports[`cond > optimize #37 1`] = `
"import { match } from "@monstermann/match";
transform(a) ? true : false;"
`;

exports[`cond > optimize #38 1`] = `
"import { match } from "@monstermann/match";
transform(a) ? true : false;"
`;

exports[`cond > optimize #39 1`] = `
"import { match } from "@monstermann/match";
(_value => transform(_value) ? true : false)(getValue());"
`;

exports[`cond > optimize #40 1`] = `
"import { match } from "@monstermann/match";
value ? true : false;"
`;

exports[`cond > optimize #41 1`] = `
"import { match } from "@monstermann/match";
(_value => v ? true : false)(getValue());"
`;

exports[`cond > optimize #42 1`] = `
"import { match } from "@monstermann/match";
(_value => (_value ? 1 : 2) ? true : false)(getValue());"
`;

exports[`cond > optimize #43 1`] = `
"import { match } from "@monstermann/match";
(_value => _value.foo ? true : false)(getValue());"
`;

exports[`cond > optimize #44 1`] = `
"import { match } from "@monstermann/match";
(_value => transform(_value) ? true : false)(getValue());"
`;

exports[`cond > optimize #45 1`] = `
"import { match } from "@monstermann/match";
(_value => transform(_value.foo) ? true : false)(getValue());"
`;

exports[`cond > optimize #46 1`] = `
"import { match } from "@monstermann/match";
value ? true : false;"
`;

exports[`cond > optimize #47 1`] = `
"import { match } from "@monstermann/match";
value ? true : false;"
`;

exports[`cond > optimize #48 1`] = `
"import { match } from "@monstermann/match";
(_value => v ? true : false)(getValue());"
`;

exports[`cond > optimize #49 1`] = `
"import { match } from "@monstermann/match";
(_value => v ? true : false)(getValue());"
`;

exports[`cond > optimize #50 1`] = `
"import { match } from "@monstermann/match";
(_value => (_value ? 1 : 2) ? true : false)(getValue());"
`;

exports[`cond > optimize #51 1`] = `
"import { match } from "@monstermann/match";
(_value => (_value ? 1 : 2) ? true : false)(getValue());"
`;

exports[`cond > optimize #52 1`] = `
"import { match } from "@monstermann/match";
(_value => _value.foo ? true : false)(getValue());"
`;

exports[`cond > optimize #53 1`] = `
"import { match } from "@monstermann/match";
(_value => _value.foo ? true : false)(getValue());"
`;

exports[`cond > optimize #54 1`] = `
"import { match } from "@monstermann/match";
(_value => transform(_value) ? true : false)(getValue());"
`;

exports[`cond > optimize #55 1`] = `
"import { match } from "@monstermann/match";
(_value => transform(_value) ? true : false)(getValue());"
`;

exports[`cond > optimize #56 1`] = `
"import { match } from "@monstermann/match";
(_value => transform(_value.foo) ? true : false)(getValue());"
`;

exports[`cond > optimize #57 1`] = `
"import { match } from "@monstermann/match";
(_value => transform(_value.foo) ? true : false)(getValue());"
`;
